# wealthpilot-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 5e29132dc11c_initial_schema.py  7cb8dfd8dd81_widen_ownership_percentage_precision.py  a3f1c9d8b2e4_add_source_quote_to_data_conflicts.py
app/: main.py
app/agents/: audio_extraction.py  column_mapping.py
app/api/: deps.py
app/api/routes/: accounts.py  admin.py  bank_details.py  conflicts.py  households.py  jobs.py  members.py
app/core/: config.py  database.py  jobs.py
app/models/: database.py
app/repositories/: account_ownership_repo.py  account_repo.py  bank_detail_repo.py  conflict_repo.py  household_repo.py  insight_repo.py  member_repo.py
app/schemas/: account.py  bank_detail.py  conflict.py  household.py  insight.py  member.py
app/services/: admin_service.py  audio_service.py  conflict_service.py  excel_service.py  household_service.py  insight_service.py  member_service.py
